force-app/main/default/objects/BET_BULK_UPLOAD_SETTINGS__c/BET_BULK_UPLOAD_SETTINGS__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This custom setting is used to store the settings for bulk upload.</description>
    <label>BET_BULK_UPLOAD_SETTINGS</label>
</CustomObject>