force-app/main/default/objects/BET_BULK_UPLOAD_SETTINGS__c/fields/Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size__c</fullName>
    <label>Batch_Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>