force-app/main/default/objects/BET_BULK_UPLOAD_SETTINGS__c/fields/Consider_First_Match__c.field-meta.xml
<CustomField>
    <fullName>Consider_First_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consider_First_Match</label>
    <type>Checkbox</type>
</CustomField>