force-app/main/default/objects/BET_BULK_UPLOAD_SETTINGS__c/fields/Consider_GT_Fields_Only__c.field-meta.xml
<CustomField>
    <fullName>Consider_GT_Fields_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consider_GT_Fields_Only</label>
    <type>Checkbox</type>
</CustomField>