force-app/main/default/objects/BET_BULK_UPLOAD_SETTINGS__c/fields/Is_OrbisID_Available__c.field-meta.xml
<CustomField>
    <fullName>Is_OrbisID_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_OrbisID_Available</label>
    <type>Checkbox</type>
</CustomField>